src/objects/DPS__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>App_Url__c</fullName>
        <label>App Url</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPS_Logo__c</fullName>
        <description>DPS logo document object ID</description>
        <label>DPS Logo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folio_Conversion__c</fullName>
        <defaultValue>true</defaultValue>
        <description>A flag to set if folioEvents should be moved to Accounts on lead conversion.</description>
        <label>Folio Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Out__c</fullName>
        <description>Time out, in seconds</description>
        <label>Time Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Period__c</fullName>
        <defaultValue>&quot;Previous FQ&quot;</defaultValue>
        <label>Time Period</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Percent__c</fullName>
        <label>Top Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Top_Salespeople__c</fullName>
        <label>Top % Salespeople</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DPS</label>
</CustomObject>